--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="http://localhost:3000/Home/home.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Hello YOU</h1>
 </body>
 </html>
